[package]
name = "chzzk-rs"
version = "0.1.0"
edition = "2021"
authors = ["zeroday0619 <zeroday0619_dev@outlook.com", "Netchive <opensource@netchive.com>"]
repository = "https://github.com/Netchive/chzzk-rs"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websocket = "0.27.0"
